dk8sChart/dist/torrent-z.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: torrent-z
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: upload
      port: 20001
      protocol: UDP
      targetPort: 20001
  selector:
    app: torrent-z
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: torrent-z
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torrent-z
  template:
    metadata:
      labels:
        app: torrent-z
    spec:
      containers:
        - env:
            - name: TRANS_UID
              value: "1000"
            - name: TRANS_GID
              value: "1000"
          image: zxyxy/transmission:0.2.0
          name: transmission
          ports:
            - containerPort: 80
            - containerPort: 20001
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/transmission/settings.json
              name: settingsjson
              subPath: settings.json
      volumes:
        - configMap:
            name: transmission
          name: settingsjson
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: torrent-z
spec:
  rules:
    - host: z.torrent.zxyxyhome.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Namespace
metadata:
  name: torrent-z
spec: {}
